--- a/lib/templates/default/fulldoc/html/css/cucumber.css
+++ b/lib/templates/default/fulldoc/html/css/cucumber.css
@@ -123,6 +123,7 @@ div.undefined { padding: 6px; }
     margin-left: 40px;
 }
 .outline .keyword {
+    margin-top: 20px;
     padding: 4px;
     font-weight: bold;
     font-size: 16px;
