Yard Server: Fix to include the cucumber stylesheet and javascript in menus
 * FIX the menu javascript was refereing to the wrong name causing the menus
   to not open

--- a/lib/docserver/doc_server/full_list/html/full_list.erb
+++ b/lib/docserver/doc_server/full_list/html/full_list.erb
@@ -5,8 +5,10 @@
     <meta name="Content-Type" content="text/html; charset=<%= charset %>" />
     <link rel="stylesheet" href="/css/full_list.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="/css/common.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/css/cucumber.css" type="text/css" media="screen" charset="utf-8" />
     <script type="text/javascript" charset="utf-8" src="/js/jquery.js"></script>
     <script type="text/javascript" charset="utf-8" src="/js/full_list.js"></script>
+    <script type="text/javascript" charset="utf-8" src="/js/cucumber.js"></script>
     <base id="base_target" target="_parent" />
   </head>
   <body>
