FIXES for menus opening and closing immediately
* Removed the js that was previously required in the other YARD
  versions to make the menus open
* Added title fields to the links which was necessary for the
  custom link tags that I created

--- a/lib/templates/default/fulldoc/html/full_list_features.erb
+++ b/lib/templates/default/fulldoc/html/full_list_features.erb
@@ -5,24 +5,25 @@
 <% n = n == 2 ? 1 : 2 %>
 <% @items.each do |feature| %>
 <li class="r<%= n %>">
-	<%= "<a class='toggle'></a>" unless feature.scenarios.empty? %>
-	<%= linkify feature, feature.value %>
-	<small><%= feature.location %></small>
+  <%= "<a class='toggle'></a>" unless feature.scenarios.empty? %>
+  <%= linkify feature, feature.value %>
+  <small><%= feature.location %></small>
 </li>
 <% n = n == 2 ? 1 : 2 %>
 <% if feature.scenarios %>
 <ul>
-	<% feature.scenarios.each_with_index do |scenario,index| %>
-	<li class="r<%= n %>">
-	  <span class='object_link'>
-   		<a href="<%= url_for(scenario.feature,"scenario_#{index}") %>">
-   		  <%= h scenario.value %>
-   		</a>
-   	</span>
-   	<small><%= scenario.location %></small>
-	</li>
+  <% feature.scenarios.each_with_index do |scenario,index| %>
+  <li class="r<%= n %>">
+    <span class='object_link'>
+       <a href="<%= url_for(scenario.feature,"scenario_#{index}") %>"
+           title="<%= h scenario.value %>">
+         <%= h scenario.value %>
+       </a>
+     </span>
+     <small><%= scenario.location %></small>
+  </li>
         <% n = n == 2 ? 1 : 2 %>
-	<% end %>
+  <% end %>
 </ul>
 <% end %>
 <% end %>
