--- a/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
+++ b/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
@@ -1,11 +1,13 @@
 <% n = 1 %>
 <% @items.each do |stepdef| %>
   <li class="r<%= n %>">
-	<span class='object_link'>
-		<span class="pre"><%= stepdef.keyword %></span>
-	  	<a href="<%= url_for stepdef %>"><span class="name"><%= h(stepdef.value) %></span></a>&nbsp;&nbsp;
-	</span>
-	<small><%= h(stepdef.location) %></small>
+  <span class='object_link'>
+    <span class="pre"><%= stepdef.keyword %></span>
+      <a href="<%= url_for stepdef %>" title="<%= h stepdef.value %>">
+        <span class="name"><%= h(stepdef.value) %></span>
+      </a>&nbsp;&nbsp;
+  </span>
+  <small><%= h(stepdef.location) %></small>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
