Step Transformers Menu will show constants / page will show full def
Step definitions with constants will appear with those constants in the
menu.

On the step transformer page the full definition of the step, with the
constants exploded will appear.

--- a/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
+++ b/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
@@ -4,7 +4,7 @@
   <span class='object_link'>
     <span class="pre"><%= stepdef.keyword %></span>
       <a href="<%= url_for stepdef %>" title="<%= h stepdef.value %>">
-        <span class="name"><%= h(stepdef.value) %></span>
+        <span class="name"><%= h stepdef.literal_value %></span>
       </a>&nbsp;&nbsp;
   </span>
   <small><%= h(stepdef.location) %></small>
