Added links to all steps and step definitions

--- a/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
+++ b/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
@@ -1,3 +1,6 @@
+<li>
+  <%= linkify YARD::CodeObjects::Cucumber::CUCUMBER_STEPTRANSFORM_NAMESPACE, "All Step Definitions" %>
+</li>
 <% n = 1 %>
 <% @items.each do |stepdef| %>
   <li class="r<%= n %>">
