--- a/lib/templates/default/fulldoc/html/full_list_steps.erb
+++ b/lib/templates/default/fulldoc/html/full_list_steps.erb
@@ -1,4 +1,8 @@
+<li>
+  <%= linkify YARD::CodeObjects::Cucumber::CUCUMBER_STEPTRANSFORM_NAMESPACE, "All Defined Steps" %>
+</li>
 <% n = 1 %>
+
 <% @items.each do |step| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
