--- a/lib/templates/default/fulldoc/html/css/cucumber.css
+++ b/lib/templates/default/fulldoc/html/css/cucumber.css
@@ -56,6 +56,11 @@
 .nodefinitions .title {
     background-color: #F5EADD;  border: 1px solid #d8d8e5; -moz-border-radius: 3px; -webkit-border-radius: 3px;
 }
+.pending .title {
+    background-color: #ffffc0;  border: 1px solid #d8d8e5; -moz-border-radius: 3px; -webkit-border-radius: 3px;
+}
+
+
 
 .scenario .title { border: none; }
 .background .title { background: #cbddeb; }
