Update alpha_table.erb and namespace_object.rb
* Update Gemfile.lock (via `bundle install`)
* Update .ruby-version to be the latest ruby version
* Remove the "ruby-" prefix from .ruby-version

--- a/lib/templates/default/featuredirectory/html/alpha_table.erb
+++ b/lib/templates/default/featuredirectory/html/alpha_table.erb
@@ -14,7 +14,11 @@
               <% objects.each do |obj| %>
                 <li>
                   <%= linkify obj, obj.value %>
-                  <small>(<%= obj.file %>)</small>
+                  <% if obj.is_a? YARD::CodeObjects::Cucumber::FeatureDirectory %>
+                    <small>(<%= obj.expanded_path %>)</small>
+                  <% else %>
+                    <small>(<%= obj.file %>)</small>
+                  <% end %>
                 </li>
               <% end %>
             </ul>
