Fixes remaining menus
The remaining menus for feature directories, steps, and step definitions.

--- a/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
+++ b/lib/templates/default/fulldoc/html/full_list_stepdefinitions.erb
@@ -1,16 +1,20 @@
 <li>
-  <%= linkify YARD::CodeObjects::Cucumber::CUCUMBER_STEPTRANSFORM_NAMESPACE, "All Step Definitions" %>
+  <div class="item" style="padding-left: 30px">
+    <%= linkify YARD::CodeObjects::Cucumber::CUCUMBER_STEPTRANSFORM_NAMESPACE, "All Step Definitions" %>
+  </div>
 </li>
-<% n = 1 %>
+<% n = 'odd' %>
 <% @items.each do |stepdef| %>
-  <li class="r<%= n %>">
-  <span class='object_link'>
-    <span class="pre"><%= stepdef.keyword %></span>
-      <a href="<%= url_for stepdef %>" title="<%= h stepdef.value %>">
-        <span class="name"><%= h stepdef.literal_value %></span>
-      </a>&nbsp;&nbsp;
-  </span>
-  <small><%= h(stepdef.location) %></small>
+  <li class="<%= n %>">
+    <div class="item" style="padding-left: 30px">
+      <span class='object_link'>
+        <span class="pre"><%= stepdef.keyword %></span>
+          <a href="<%= url_for stepdef %>" title="<%= h stepdef.value %>">
+            <span class="name"><%= h stepdef.literal_value %></span>
+          </a>&nbsp;&nbsp;
+      </span>
+      <small><%= h(stepdef.location) %></small>
+    </div>
   </li>
-  <% n = n == 2 ? 1 : 2 %>
+  <% n = n == 'even' ? 'odd' : 'even' %>
 <% end %>
