--- a/lib/templates/default/fulldoc/html/full_list_featuredirectories.erb
+++ b/lib/templates/default/fulldoc/html/full_list_featuredirectories.erb
@@ -1,11 +1,12 @@
-<% n = 1 %>
-<% n = n == 2 ? 1 : 2 %>
+<% n = 'odd' %>
 <% @items.each do |directory| %>
-<li class="r<%= n %>">
-  <%= "<a class='toggle'></a>" unless directory.features.empty? && directory.subdirectories.empty? %>
-  <%= linkify directory, directory.value %>
-  <small><%= directory.location %></small>
+<li class="<%= n %>">
+  <div class="item" style="padding-left: 30px">
+    <%= "<a class='toggle'></a>" unless directory.features.empty? && directory.subdirectories.empty? %>
+    <%= linkify directory, directory.value %>
+    <small><%= directory.location %></small>
+  </div>
 </li>
-<% n = n == 2 ? 1 : 2 %>
+<% n = n == 'even' ? 'odd' : 'even' %>
 <%= directory_node directory %>
 <% end %>
