--- a/lib/templates/default/fulldoc/html/full_list_featuredirectories.erb
+++ b/lib/templates/default/fulldoc/html/full_list_featuredirectories.erb
@@ -7,6 +7,5 @@
     <small><%= directory.location %></small>
   </div>
 </li>
-<% n = n == 'even' ? 'odd' : 'even' %>
-<%= directory_node directory %>
+<%= directory_node directory, 30, n %>
 <% end %>
