--- a/lib/templates/default/fulldoc/html/full_list_tags.erb
+++ b/lib/templates/default/fulldoc/html/full_list_tags.erb
@@ -9,7 +9,7 @@
   <li class="<%= n %>">
     <div class="item" style="padding-left: 30px;">
       <%= linkify tag, tag.value %>
-      <small style="display: inline;"><%= tag.all_scenarios.size %></small>
+      <small style="display: inline;"><%= tag.total_scenarios %></small>
     </div>
   </li>
   <% n = n == 'odd' ? 'even' : 'odd' %>
